[add] get posts by thread id
